Revert "Use new connection method in both HttpConnectionRedirect and HttpClient"
This reverts commit 47b8f357dfafaf94c06438ae81387ded7e3b4dca.