@@ -37,33 +37,29 @@ public class HttpClientWrapper implements Wrapper {
                 @Advice.Argument(0) Object uriObject,
                 @Advice.Argument(2) Object httpRequestObject
         ) {
-            String jarFilePath = System.getProperty("AIK_agent_api_jar");
-            URLClassLoader classLoader = null;
             try {
                 URI uri = (URI) uriObject;
                 HttpRequest httpRequest = (HttpRequest) httpRequestObject;
-                URL originUrl = httpRequest.uri().toURL();
-                try {
-                    URL[] urls = { new URL(jarFilePath) };
-                    classLoader = new URLClassLoader(urls);
-                } catch (MalformedURLException ignored) {}
-                if (classLoader == null) {
-                    return;
-                }
+
+                // Call to collector :
+                String pathToAikidoFolder = System.getenv("AIKIDO_DIRECTORY");
+                String jarFilePath = "file:" + pathToAikidoFolder + "agent_api.jar";
+                URL[] urls = { new URL(jarFilePath) };
+                URLClassLoader classLoader = new URLClassLoader(urls);
+
                 // Load the class from the JAR
                 Class<?> clazz = classLoader.loadClass("dev.aikido.agent_api.collectors.RedirectCollector");
 
-                // Run report with "argument"
+                // Run report func with its arguments
                 for (Method method2: clazz.getMethods()) {
                     if(method2.getName().equals("report")) {
+                        URL originUrl = httpRequest.uri().toURL();
                         method2.invoke(null, originUrl, uri.toURL());
                         break;
                     }
                 }
-            } catch(Throwable e) {}
-            try {
                 classLoader.close(); // Close the class loader
-            } catch (IOException ignored) {}
+            } catch (Throwable ignored) {}
         }
     }
 }
